<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="horizontal">

        <TableLayout
            android:id="@+id/quoteTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:text="@string/quote"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:text="@string/slogan" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/signUpTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:stretchColumns="0">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/signUpTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:gravity="center"
                    android:text="@string/signUpForFree" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/editSignUpEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textEmailAddress"
                    android:text="@string/prompt_email" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editSignUpPass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight=".5"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:text="@string/prompt_email" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/editSignUpPassConfirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:text="@string/prompt_email" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingTop="10dp">

                <Button
                    android:id="@+id/signUpbutton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:ems="10"
                    android:gravity="center"
                    android:text="@string/signUp" />

            </TableRow>

        </TableLayout>
    </LinearLayout>

</RelativeLayout>


