<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/cart"
                android:layout_width="123dp"
                android:layout_height="125dp"
                android:layout_marginStart="@dimen/padding_normal"
                app:srcCompat="@mipmap/cart_round" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TableLayout
                    android:id="@+id/quoteTable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/quotes_margin"
                    android:layout_weight="0.5">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:layout_weight=".5"
                            android:gravity="center"
                            android:text="@string/quote"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:layout_weight=".5"
                            android:gravity="center"
                            android:text="@string/slogan" />
                    </TableRow>

                </TableLayout>

                <TableLayout
                    android:id="@+id/signUpTable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginTop="@dimen/center_image_height"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_weight="0.5"
                    android:stretchColumns="0">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp">

                        <EditText
                            android:id="@+id/edit_username"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:ems="10"
                            android:gravity="center"
                            android:hint="@string/prompt_username"
                            android:inputType="text" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/editSignInPass"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_weight=".5"
                            android:ems="10"
                            android:gravity="center"
                            android:inputType="textPassword" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:paddingTop="10dp" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:paddingTop="10dp">

                        <Button
                            android:id="@+id/sign_in"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:ems="10"
                            android:gravity="center"
                            android:text="@string/action_sign_in_short" />

                    </TableRow>

                </TableLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>